GPv3: Natural Drawing build modifier can not be slowed down on premade objects #130201
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#130201
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 565.90 Opengl Backend
Blender Version
Broken: version: 4.3.0 Beta, branch: blender-v4.3-release, commit date: 2024-11-12 23:05, hash:
baa193c3b6c9
Worked: 4.2
Short description of error
When a premade grease pencil object (E.g. Built in monkey head) has the build modifier added to it, and set to
Natural Drawing
mode, the build modifier can not be slowed down.Everything works fine for hand drawn strokes.
Exact steps for others to reproduce the error
Add a Grease Pencil monkey to the scene
Give it a
Build
modifierChange the Build modifer
Timing
toNatural Drawing Speed
Play back the animation and take note of how long it takes to complete.
Reduce the
Speed factor
in the build modifier to something small (E.g. 0.05) and increase theMaximum gap
in neccesary.Play back the animation and notice it still takes the same amount of time to complete.
Compare to a manually drawn grease pencil stroke, or 4.2 and notice it works for those.
This is a minor issue and can probably be left for 4.3.1 or 4.4
Humm this is interesting. Not sure why, maybe it doesn't have enough stroke strart/gap information...?
Is this with #130199 or not?
Premade curves don't have a detla_time attribute which is neccesary for the
Natural Drawing
mode.So it falls back to a different mode which doesn't take the settings of the
Natural drawing
mode into account.See
01db47b82c
(Fixes: #129766)I can reproduce it in the release branch, so it's related (as it's the Natural Drawing speed), but needs a seperate fix.
Hi, can confirm
Grease Pencil Natural Drawing build modifier can not be slowed down on premade Grease Pencil objectsto GPv3: Natural Drawing build modifier can not be slowed down on premade Grease Pencil objectsGPv3: Natural Drawing build modifier can not be slowed down on premade Grease Pencil objectsto GPv3: Natural Drawing build modifier can not be slowed down on premade objectsSeems like there should be fallback behavior that respects the speed factor when the delta time attribute is missing.
Since this is not a critical issue, I'll remove the 4.3 target.