Fix #130201: Grease Pencil Build modifier don't work on premade objects

This PR makes it so that when the `delta_time` attribute does not exist
or is equal to zero, the Grease Pencil Strokes will default to one
second to be drawn.
This feature existed in the legacy modifier but was not implemented in
GPv3.

Pull Request: https://projects.blender.org/blender/blender/pulls/146950